Added presentation slides and links

--- a/IEEE_Workshop_Schedule.html
+++ b/IEEE_Workshop_Schedule.html
@@ -123,8 +123,8 @@ div.WordSection1
   border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
-  style='font-size:9.0pt;line-height:115%'>A New Parallel Python Tool for the
-  Standardization of Earth System Model Data</span></p>
+  style='font-size:9.0pt;line-height:115%'><a href="presentations/kpaul_bigdata_2016.pptx">A New Parallel Python Tool for the
+  Standardization of Earth System Model Data</a></span></p>
   </td>
   <td width="25%" style='width:25.16%;border-top:none;border-left:none;
   border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -241,8 +241,8 @@ div.WordSection1
   border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
-  style='font-size:9.0pt;line-height:115%'>Implementing Connected Component
-  Labeling as a User Defined Operator for SciDB</span></p>
+  style='font-size:9.0pt;line-height:115%'><a href="https://www.sugarsync.com/pf/D7103074_07457104_852931">Implementing Connected Component
+  Labeling as a User Defined Operator for SciDB</a></span></p>
   </td>
   <td width="25%" style='width:25.16%;border-top:none;border-left:none;
   border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -286,8 +286,8 @@ div.WordSection1
   border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
-  style='font-size:9.0pt;line-height:115%'>Where Big Data meets Linked Data:
-  Applying standard data models to environmental data streams</span></p>
+  style='font-size:9.0pt;line-height:115%'><a href="http://www.slideshare.net/AdamLeadbetter/where-linked-data-meets-big-data-applying-standard-data-models-to-environmental-data-streams">Where Big Data meets Linked Data:
+  Applying standard data models to environmental data streams</a></span></p>
   </td>
   <td width="25%" style='width:25.16%;border-top:none;border-left:none;
   border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
