Updated link to a 2016 presentation

--- a/IEEE_Workshop_Schedule.html
+++ b/IEEE_Workshop_Schedule.html
@@ -241,7 +241,7 @@ div.WordSection1
   border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
-  style='font-size:9.0pt;line-height:115%'><a href="https://www.sugarsync.com/pf/D7103074_07457104_852931">Implementing Connected Component
+  style='font-size:9.0pt;line-height:115%'><a href="presentations/OlosoAO_etal_2016_IEEE_BigData.pptx">Implementing Connected Component
   Labeling as a User Defined Operator for SciDB</a></span></p>
   </td>
   <td width="25%" style='width:25.16%;border-top:none;border-left:none;
